# Continuum

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.continuum/: execution-domains.json  expert-references.json  harness-contributions.json  pinned-contribution-inventory.json  repository.json  wezterm-contributions.json
.github/workflows/: ci.yml  completion-proof.yml
docs/: architecture.md  branch-topology.md  completion-proof.md  harness-interop.md  pinned-delegation-capability-inventory.md  wezterm-domain-lifecycle.md
docs/coordination/: cross-repo-foundry-continuum-map.md
docs/prior-art/: wezterm.md
schemas/: branch-topology-decision.schema.json  branch-topology-snapshot.schema.json  execution-domain-decision.schema.json  execution-domain-snapshot.schema.json  execution-domains.schema.json  expert-reference-catalog.schema.json  github-actions-proof.schema.json  harness-contribution.schema.json  repository.schema.json  result-packet.schema.json  task-packet.schema.json
scripts/: evaluate-domain-action.py  validate.py
src/continuum/: __init__.py  branch_topology.py  cli.py  completion_gates.py  contracts.py  domain_lifecycle.py  execution_domains.py  git_evidence.py  github_actions.py  github_actions_api.py  harness_interop.py  (+3 more)
tests/: test_branch_topology.py  test_ci_proof_cli.py  test_completion_gates.py  test_contracts.py  test_domain_lifecycle.py  test_execution_domains.py  test_github_actions.py  test_github_actions_security.py  test_harness_interop.py  test_result_cli.py  test_result_packets.py  test_task_packets.py  test_workflows.py
