[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "continuum-orchestrator"
version = "0.3.0"
description = "A local orchestration engine that carries repository context, evidence, and workflow state across agents, sessions, and development sprints."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "EndeavorEverlasting" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools"
]
dependencies = []

[project.scripts]
continuum = "continuum.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
